# gai

./: .dockerignore  .env.example  .gai.yaml  .gitignore  CHANGELOG.md  Containerfile  LICENSE  README.md  gai.db  gai.py  pyproject.toml  requirements.txt
.serena/: project.yml
src/gai/: __main__.py
src/gai/ai/: __init__.py  anannas_client.py  groq_client.py  llm_factory.py  ollama_client.py  openrouter_client.py  prompts.py  rate_limiter.py
src/gai/commands/: commit.py  debug.py  diff.py  fix.py  models.py  release.py  resolve.py  review_merge.py  version.py
src/gai/core/: config.py  db_storage.py  git.py  stats.py  tokens.py  versioning.py
src/gai/inference/: __init__.py  engine.py  exceptions.py  models.py  protocols.py
src/gai/inference/adapters/: __init__.py  anannas.py  groq.py  ollama.py  openrouter.py
src/gai/inference/strategies/: __init__.py  fallback.py  rate_limit.py  retry.py
src/gai/ui/: interactive.py
src/gai/utils/: detection.py
tests/: __init__.py  conftest.py
tests/integration/: test_db.py  test_real_commit.py
tests/unit/: test_tokens.py
